# multisync

./: .env  .gitignore  POSITIONING.md  README.md  REFACTOR_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
multisync-core/: .gitignore  demo_results.json  pyproject.toml  results.json
multisync-core/multisync/: __init__.py  __main__.py  cascade.py  cli.py  core.py  dataset.py  dynamic_features.py  io.py  nlg_vocab.py  normalization.py  prediction.py  synthetic.py
multisync-core/tests/: test_core.py
src/: App.tsx  index.css
src/components/: AppSidebar.tsx  CascadeMapPanel.tsx  ConfigPanel.tsx  ModalityDetail.tsx  ReferencesPanel.tsx  ScoreViewPanel.tsx  UnifiedTimeline.tsx
src/integrations/supabase/: types.ts
src/lib/: behavioral-coding-guide.ts  cascade-analysis.ts  csv-parser.ts  data-validation.ts  dynamic-features.ts  edf-parser.ts  prediction-window.ts  sample-datasets.ts  surrogate-testing.ts  synchrony-data.ts  wcc-compute.ts
src/pages/: AnnotatePage.tsx  ConfigPage.tsx  ImportPage.tsx  Index.tsx  ModalityPage.tsx  PipelinePage.tsx  ReferencesPage.tsx
supabase/: config.toml
supabase/migrations/: 20260408080908_895f1710-b9b1-40cb-aba0-8e2c744f6556.sql
